Toggling in the server

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = "MIT"
 python = "^3.9"
 pymodbus = {version = "^2.5.2", extras = ["repl"]}
 websockets = "^10.0"
+requests = "^2.26.0"
 
 [tool.poetry.dev-dependencies]
 
