--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.9"
 pymodbus = {version = "^2.5.2", extras = ["repl"]}
 websockets = "^10.0"
 requests = "^2.26.0"
+PyYAML = "^5.4.1"
 
 [tool.poetry.dev-dependencies]
 
