--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ requests = "^2.26.0"
 PyYAML = "^5.4.1"
 
 [tool.poetry.dev-dependencies]
+mypy = "^0.910"
+types-requests = "^2.25.11"
+types-PyYAML = "^5.4.12"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
