--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -25,7 +25,7 @@ jobs:
           virtualenvs-in-project: true
       - name: Install dependencies
         run: |
-          poetry install
+          poetry install --no-interaction
       - name: Run flake8
         run: |
           source .venv/bin/activate
