--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ PyYAML = "^5.4.1"
 mypy = "^0.910"
 types-requests = "^2.25.11"
 types-PyYAML = "^5.4.12"
+flake8 = "^4.0.1"
+black = "^21.9b0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
