--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ types-requests = "^2.25.11"
 types-PyYAML = "^5.4.12"
 flake8 = "^4.0.1"
 black = "^21.9b0"
+isort = "^5.9.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
