--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,11 +18,10 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: "3.x"
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-        with:
-          virtualenvs-in-project: true
+          python-version: "3.9"
+      - name: Set up poetry
+        run: |
+          python -m pip install pip wheel poetry
       - name: Install dependencies
         run: |
           poetry install --no-interaction
