--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,9 +2,11 @@ name: CI
 
 on:
   push:
-  pull_request:
     branches:
       - master
+  pull_request:
+    branches:
+      - "*"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
