--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,12 +18,17 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python
+        id: setup-python
         uses: actions/setup-python@v2
         with:
           python-version: "3.9"
       - name: Set up poetry
         run: |
           python -m pip install pip wheel poetry
+      - uses: actions/cache@v2
+        with:
+          path: ~/.cache/pypoetry/virtualenvs
+          key: ${{ runner.os }}-python-${{ steps.setup-python.outputs.python-version }}-poetry-${{ hashFiles('poetry.lock') }}
       - name: Install dependencies
         run: |
           poetry install --no-interaction
