--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,10 +26,12 @@ jobs:
         run: |
           python -m pip install -U poetry
       - uses: actions/cache@v2
+        id: cache-pydeps
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-python-${{ steps.setup-python.outputs.python-version }}-poetry-${{ hashFiles('poetry.lock') }}
       - name: Install dependencies
+        if: steps.cache-pydeps.outputs.cache-hit != 'true'
         run: |
           poetry install --no-interaction
       - name: Run flake8
